--- a/templates/base/base.html
+++ b/templates/base/base.html
@@ -60,6 +60,7 @@
                         <h6 class="collapse-header">Inventario:</h6>
                         <a class="collapse-item" href="{% url 'inv_app:categorias_list' %}">Categorías</a>
                         <a class="collapse-item" href="{% url 'inv_app:subcategorias_list' %}">Sub Categorías</a>
+                        <a class="collapse-item" href="{% url 'inv_app:marcas_list' %}">Marcas</a>
                         <a class="collapse-item" href="#">Cards</a>
                     </div>
                 </div>
