--- a/templates/inv/marca_list.html
+++ b/templates/inv/marca_list.html
@@ -5,7 +5,7 @@
 <div class="card shadow mb-4">
     <!-- Card Header - Dropdown -->
     <div class="card-header py-3 d-flex flex-row align-items-center justify-content-between">
-        <h6 class="m-0 font-weight-bold text-primary">Listado de Sub Categorías</h6>
+        <h6 class="m-0 font-weight-bold text-primary">Listado de Marcas</h6>
         <div class="dropdown no-arrow">
             <a class="dropdown-toggle" href="#" role="button" id="dropdownMenuLink"
                data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
@@ -14,18 +14,17 @@
             <div class="dropdown-menu dropdown-menu-right shadow animated--fade-in"
                  aria-labelledby="dropdownMenuLink">
                 <div class="dropdown-header">Acciones:</div>
-                <a class="dropdown-item" href="{% url 'inv_app:subcategoria_add' %}"><i class="far fa-calendar-plus"></i> Nueva</a>
+                <a class="dropdown-item" href="{% url 'inv_app:marca_add' %}"><i class="far fa-calendar-plus"></i> Nueva</a>
             </div>
         </div>
     </div>
     <!-- Card Body -->
     <div class="card-body">
         {% if not obj %}
-        <div class="alert alert-info">No hay sub categorías</div>
+        <div class="alert alert-info">No hay regisros</div>
         {% else %}
         <table class="table table-sm table-striped table-hover" id="tbl_listado">
             <thead>
-            <th>Categoria</th>
             <th>Id</th>
             <th>Descripción</th>
             <th>Estado</th>
@@ -36,16 +35,15 @@
             <tbody>
             {% for item in obj %}
             <tr>
-                <td>{{ item.categoria }}</td>
                 <td>{{ item.id }}</td>
                 <td>{{ item.descripcion }}</td>
                 <td>{{ item.estado|yesno:"Activo,Inactivo" }}</td>
                 <td>{{ item.fc|date:"d/m/Y H:i:s" }}</td>
                 <td>{{ item.fm|date:"d/m/Y H:i:s" }}</td>
                 <td>
-                    <a href="{% url 'inv_app:subcategoria_edit' item.id %}" class="btn btn-warning btn-circle btn-sm"
+                    <a href="{% url 'inv_app:marca_edit' item.id %}" class="btn btn-warning btn-circle btn-sm"
                        role="button"><i class="far fa-edit"></i></a>
-                    <a href="{% url 'inv_app:subcategoria_del' item.id %}" class="btn btn-danger btn-circle btn-sm" role="button"><i class="far fa-trash-alt"></i></a>
+                    <a href="#" class="btn btn-danger btn-circle btn-sm" role="button"><i class="far fa-trash-alt"></i></a>
                 </td>
             </tr>
             {% endfor %}
