agregdo funcion inactivar

--- a/templates/inv/marca_form.html
+++ b/templates/inv/marca_form.html
@@ -1,16 +1,14 @@
 {% extends 'base/base.html' %}
 
 {% block page_content %}
-<!-- Earnings (Monthly) Card Example -->
 <form method="POST" class="form-inline">{% csrf_token %}
-    <div class="col-xl-6 col-md-6 mb-6">
+    <div class="col-xl-12 col-md-12 mb-12">
         <div class="card border-left-{% if obj %}warning{% else %}success{% endif %} shadow h-100 py-2">
             <div class="card-body">
                 <div class="row no-gutters align-items-center">
                     <div class="col mr-2">
                         <div class="text-xs font-weight-bold text-primary text-uppercase mb-1">
-                            {% if obj %}Editar{% else %}Nueva{% endif %} Marca
-                        </div>
+                            {% if obj %}Editar{% else %}Nueva{% endif %} Marca</div>
                         <div class="dropdown-divider"></div>
                         <div class="row">
                             <div class="col-10">
@@ -20,6 +18,7 @@
                             </div>
                             <div class="col-2">
                                 <div class="input-group">
+                                    <label for="id_estado">Estado</label>
                                     {{ form.estado }}
                                 </div>
                             </div>
@@ -27,11 +26,10 @@
                         <div class="dropdown-divider"></div>
                         <div class="row">
                             <div class="col">
-                                <button type="submit" class="btn btn-flat btn-danger"><span class="fa fa-save"></span>
-                                    Guardar
-                                </button>
-                                <a href="{% url 'inv_app:marcas_list' %}" class="btn btn-flat btn-success"><span
-                                        class="fa fa-undo"> Cancelar</span></a>
+                                <button type="submit" class="btn btn-danger">
+                                    <span class="fa fa-save"></span> Guardar</button>
+                                <a href="{% url 'inv_app:marcas_list' %}" class="btn btn-success">
+                                    <span class="fa fa-undo"> Cancelar</span></a>
                             </div>
                         </div>
                     </div>
