--- a/templates/inv/categoria_list.html
+++ b/templates/inv/categoria_list.html
@@ -45,7 +45,7 @@
                 <td>
                     <a href="{% url 'inv_app:categoria_edit' item.id %}" class="btn btn-warning btn-circle btn-sm"
                        role="button"><i class="far fa-edit"></i></a>
-                    <a href="#" class="btn btn-danger btn-circle btn-sm" role="button"><i class="far fa-trash-alt"></i></a>
+                    <a href="{% url 'inv_app:categoria_inactivar' item.id %}" class="btn btn-danger btn-circle btn-sm" role="button"><i class="far fa-trash-alt"></i></a>
                 </td>
             </tr>
             {% endfor %}
