Agregado CRUD de unidades de medida

--- a/templates/base/base.html
+++ b/templates/base/base.html
@@ -61,6 +61,7 @@
                         <a class="collapse-item" href="{% url 'inv_app:categorias_list' %}">Categorías</a>
                         <a class="collapse-item" href="{% url 'inv_app:subcategorias_list' %}">Sub Categorías</a>
                         <a class="collapse-item" href="{% url 'inv_app:marcas_list' %}">Marcas</a>
+                        <a class="collapse-item" href="{% url 'inv_app:unimedidas_list' %}">Unidades de Medidas</a>
                         <a class="collapse-item" href="#">Cards</a>
                     </div>
                 </div>
