CRUD Productos con modal

--- a/templates/base/base.html
+++ b/templates/base/base.html
@@ -62,6 +62,7 @@
                         <a class="collapse-item" href="{% url 'inv_app:subcategorias_list' %}">Sub Categorías</a>
                         <a class="collapse-item" href="{% url 'inv_app:marcas_list' %}">Marcas</a>
                         <a class="collapse-item" href="{% url 'inv_app:unimedidas_list' %}">Unidades de Medidas</a>
+                        <a class="collapse-item" href="{% url 'inv_app:productos_list' %}">Productos</a>
                         <a class="collapse-item" href="#">Cards</a>
                     </div>
                 </div>
@@ -306,7 +307,7 @@
                         <li class="nav-item dropdown no-arrow">
                             <a class="nav-link dropdown-toggle" href="#" id="userDropdown" role="button"
                                 data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                                <span class="mr-2 d-none d-lg-inline text-gray-600 small">Douglas McGee</span>
+                                <span class="mr-2 d-none d-lg-inline text-gray-600 small">{{ user }}</span>
                                 <img class="img-profile rounded-circle"
                                     src="{% static 'base/img/undraw_profile.svg' %}">
                             </a>
@@ -387,6 +388,11 @@
             </div>
         </div>
     </div>
+
+    <!-- Producto Modal-->
+    <div class="modal fade" id="popup">
+
+    </div>
     <!-- Bootstrap core JavaScript-->
     <script src="{% static 'base/vendor/jquery/jquery.min.js' %}"></script>
     <script src="{% static 'base/vendor/bootstrap/js/bootstrap.bundle.min.js' %}"></script>
@@ -398,5 +404,27 @@
     <script src="{% static 'base/vendor/datatables/jquery.dataTables.min.js' %}"></script>
     <script src="{% static 'base/vendor/datatables/dataTables.bootstrap4.min.js' %}"></script>
     {% block js_page %} {% endblock js_page %}
+
+    {% block control_modal %}
+    <script>
+        function abrir_modal(url)
+        {
+            $('#popup').load(url, function(){
+                $(this).modal({
+                    backdrop: 'static',
+                    keyboard: false
+                })
+                $(this).modal('show');
+            });
+            return false;
+        }
+
+        function cerrar_modal()
+        {
+            $('#popup').modal('hide');
+            return false;
+        }
+    </script>
+    {% endblock control_modal %}
 </body>
 </html>
