CRUD Proveedores terminado

--- a/templates/base/base.html
+++ b/templates/base/base.html
@@ -65,6 +65,10 @@
                         <a class="collapse-item" href="{% url 'inv_app:productos_list' %}">Productos</a>
                         <a class="collapse-item" href="#">Cards</a>
                     </div>
+                     <div class="bg-white py-2 collapse-inner rounded">
+                        <h6 class="collapse-header">Compras:</h6>
+                        <a class="collapse-item" href="{% url 'cmp_app:proveedores_list' %}">Proveedor</a>
+                     </div>
                 </div>
             </li>
             <!-- Nav Item - Utilities Collapse Menu -->
