--- a/templates/inv/producto_list.html
+++ b/templates/inv/producto_list.html
@@ -6,6 +6,7 @@
     <!-- Card Header - Dropdown -->
     <div class="card-header py-3 d-flex flex-row align-items-center justify-content-between">
         <h6 class="m-0 font-weight-bold text-primary">Listado de Productos</h6>
+        {% if perms.inv.add_producto %}
         <div class="dropdown no-arrow">
             <a class="dropdown-toggle" href="#" role="button" id="dropdownMenuLink"
                data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
@@ -17,6 +18,7 @@
                 <a class="dropdown-item" href="#" onclick="return abrir_modal('{% url 'inv_app:producto_add' %}')" ><i class="far fa-calendar-plus"></i> Nuevo</a>
             </div>
         </div>
+        {% endif %}
     </div>
     <!-- Card Body -->
     <div class="card-body">
@@ -49,9 +51,13 @@
                 <td>{{ item.unidad_medida }}</td>
                 <td>{{ item.estado|yesno:"Activo,Inactivo" }}</td>
                 <td>
+                    {% if perms.inv.change_producto %}
                     <button class="btn btn-warning btn-circle btn-sm" onclick="return abrir_modal('{% url 'inv_app:producto_edit' item.id %}')">
                         <i class="far fa-edit"></i></button>
+                    {% endif %}
+                    {% if perms.inv.delete_producto %}
                     <a href="{% url 'inv_app:producto_inactivar' item.id %}" class="btn btn-danger btn-circle btn-sm" role="button"><i class="far fa-trash-alt"></i></a>
+                    {% endif %}
                 </td>
             </tr>
             {% endfor %}
