--- a/templates/inv/marca_form.html
+++ b/templates/inv/marca_form.html
@@ -29,7 +29,7 @@
                                 <button type="submit" class="btn btn-danger">
                                     <span class="fa fa-save"></span> Guardar</button>
                                 <a href="{% url 'inv_app:marcas_list' %}" class="btn btn-success">
-                                    <span class="fa fa-undo"> Cancelar</span></a>
+                                    <span class="fa fa-undo"></span> Cancelar</a>
                             </div>
                         </div>
                     </div>
