--- a/templates/inv/subcategoria_form.html
+++ b/templates/inv/subcategoria_form.html
@@ -33,7 +33,7 @@
                       <div class="row">
                         <div class="col">
                           <button type="submit" class="btn btn-flat btn-danger"><span class="fa fa-save"></span> Guardar</button>
-                          <a href="{% url 'inv_app:subcategorias_list' %}" class="btn btn-flat btn-success"><span class="fa fa-undo"> Cancelar</span></a>
+                          <a href="{% url 'inv_app:subcategorias_list' %}" class="btn btn-flat btn-success"><span class="fa fa-undo"></span> Cancelar</a>
                         </div>
                       </div>
                     </div>
