--- a/templates/inv/unimedida_form.html
+++ b/templates/inv/unimedida_form.html
@@ -30,7 +30,7 @@
                                     Guardar
                                 </button>
                                 <a href="{% url 'inv_app:unimedidas_list' %}" class="btn btn-flat btn-success"><span
-                                        class="fa fa-undo"> Cancelar</span></a>
+                                        class="fa fa-undo"></span> Cancelar</a>
                             </div>
                         </div>
                     </div>
