--- a/templates/inv/categoria_form.html
+++ b/templates/inv/categoria_form.html
@@ -31,7 +31,7 @@
                                     Guardar
                                 </button>
                                 <a href="{% url 'inv_app:categorias_list' %}" class="btn btn-flat btn-success"><span
-                                        class="fa fa-undo"> Cancelar</span></a>
+                                        class="fa fa-undo"></span> Cancelar</a>
                             </div>
                         </div>
                     </div>
