Preparado el plugin xhtml2pdf

--- a/templates/cmp/compras_list.html
+++ b/templates/cmp/compras_list.html
@@ -14,6 +14,7 @@
                  aria-labelledby="dropdownMenuLink">
                 <div class="dropdown-header">Acciones:</div>
                 <a class="dropdown-item" href="{% url 'cmp_app:compras_new' %}"><i class="far fa-calendar-plus"></i> Nuevo</a>
+                <a class="dropdown-item" href="{% url 'cmp_app:compras_print_all %}"><i class="fas fa-print"></i> Listado</a>
             </div>
         </div>
         {% endif %}
