Reporte de compra en pdf

--- a/templates/cmp/compras_print_one.html
+++ b/templates/cmp/compras_print_one.html
@@ -11,47 +11,8 @@
         margin: 1cm;
     }
 
-    .table {
-        width: 100%;
-        max-width: 100%;
-        margin-botton: 5px;
-        background-color: #fff;
-    }
-
-    .table th, .table td {
-        padding: 2px;
-        vertical-align: top;
-        border-top: 1px solid #000;
+    .table td .numero {
         text-align: center;
-    }
-
-    .table thead th {
-        vertical-align: bottom;
-        border-bottom: 2px solid #000;
-    }
-
-    .table tbody + tbody {
-        border-top: 2px solid #000;
-    }
-
-    .table .table {
-        background-color: #fff;
-    }
-
-    .list-group {
-        display: block;
-        width: 100%;
-        list-style: none;
-        margin-top: 15px;
-        margin-bottom: 15px;
-    }
-
-    .list-group p {
-        width: 100%;
-        height: 20px;
-        line-height: 20px;
-        list-style: none;
-        font-size: 1.1em;
     }
     </style>
 </head>
@@ -60,25 +21,49 @@
     <div class="card">
         <div class="card-header">
             <h3>Sistema de Compras AR</h3>
-            <h5>Reporte de compras al {{ today|date:"d/m/Y" }}</h5>
+        </div>
+        <div class="list-group">
+            <p>Nro.Compra: {{ encabezado.id }}</p>
+            <table class="">
+                <tr>
+                    <td>Proveedor:</td>
+                    <td>{{ encabezado.proveedor }}</td>
+                    <td>Fecha Compra:</td>
+                    <td>{{ encabezado.fecha_compra|date:"d/m/Y" }}</td>
+                </tr>
+                <tr>
+                    <td>Nro.Factura</td>
+                    <td>{{ encabezado.nro_factura }}</td>
+                    <td>Fecha Factura:</td>
+                    <td>{{ encabezado.fecha_factura|date:"d/m/Y" }}</td>
+                </tr>
+                <tr>
+                    <td>Observación:</td>
+                    <td colspan="3">{{ encabezado.observacion }}</td>
+                </tr>
+            </table>
+            <hr>
         </div>
         <table class="table">
             <thead>
             <tr>
-                <th>Nro.Compra</th>
-                <th>Proveedor</th>
-                <th>Fecha</th>
+                <th>Producto</th>
+                <th>Cantidad</th>
+                <th>Precio Venta</th>
+                <th>SubTotal</th>
+                <th>Descuento</th>
                 <th>Total</th>
             </tr>
             </thead>
             <tbody>
-            {% for item in obj %}
+            {% for item in detalle %}
             <tr>
-                <td>{{ item.id }}</td>
-                <td>{{ item.proveedor }}</td>
-                <td>{{ item.fecha_compra|date:"d/m/Y" }}</td>
-                <td>{{ item.total }}</td>
-            </tr>
+                <td><span class="small">{{ item.producto }}</span></td>
+                <td class="numero">{{ item.cantidad }}</td>
+                <td class="numero">{{ item.precio_prv }}</td>
+                <td class="numero">{{ item.subtotal }}</td>
+                <td class="numero">{{ item.descuento }}</td>
+                <td class="numero">{{ item.total }}</td>
             {% endfor %}
             </tbody>
         </table>
