--- a/templates/fac/clientes_list.html
+++ b/templates/fac/clientes_list.html
@@ -12,7 +12,7 @@
             <div class="dropdown-menu dropdown-menu-right shadow animated--fade-in"
                  aria-labelledby="dropdownMenuLink">
                 <div class="dropdown-header">Acciones:</div>
-                <a class="dropdown-item" href="#" onclick="return abrir_modal('{# url 'cmp_app:proveedor_add' #}')" ><i class="far fa-calendar-plus"></i> Nuevo</a>
+                <a class="dropdown-item" onclick="return abrir_modal('{% url 'fac_app:cliente_add' %}')" ><i class="far fa-calendar-plus"></i> Nuevo</a>
             </div>
         </div>
     </div>
@@ -35,14 +35,13 @@
             {% for item in obj %}
             <tr>
                 <td>{{ item.id }}</td>
-                <td>{{ item.descripcion }}</td>
-                <td>{{ item.direccion }}</td>
-                <td>{{ item.contacto }}</td>
-                <td>{{ item.telefono }}</td>
-                <td>{{ item.email }}</td>
+                <td>{{ item.nombres }}</td>
+                <td>{{ item.apellidos }}</td>
+                <td>{{ item.tipo }}</td>
+                <td>{{ item.celular }}</td>
                 <td>{{ item.estado|yesno:"Activo,Inactivo" }}</td>
                 <td>
-                    <button class="btn btn-warning btn-circle btn-sm" onclick="return abrir_modal('{# url 'cmp_app:proveedor_edit' item.id #}')">
+                    <button class="btn btn-warning btn-circle btn-sm" onclick="return abrir_modal('{% url 'fac_app:cliente_edit' item.id %}')">
                         <i class="far fa-edit"></i></button>
                     <button class="btn btn-danger btn-circle btn-sm" onclick="return abrir_modal('{# url 'cmp_app:proveedor_inactivar_modal' item.id #}')">
                         <i class="far fa-thumbs-down"></i>
