--- a/templates/fac/clientes_list.html
+++ b/templates/fac/clientes_list.html
@@ -39,7 +39,13 @@
                 <td>{{ item.apellidos }}</td>
                 <td>{{ item.tipo }}</td>
                 <td>{{ item.celular }}</td>
-                <td>{{ item.estado|yesno:"Activo,Inactivo" }}</td>
+                <td onclick="inactivar({{ item.id }})">
+                    {% if item.estado %}
+                    <i class="far fa-thumbs-up text-primary"></i>
+                    {% else %}
+                    <i class="far fa-thumbs-down text-danger"></i>
+                    {% endif %}
+                </td>
                 <td>
                     <button class="btn btn-warning btn-circle btn-sm" onclick="return abrir_modal('{% url 'fac_app:cliente_edit' item.id %}')">
                         <i class="far fa-edit"></i></button>
@@ -58,6 +64,30 @@
 
 {% block js_page %}
 <script>
+    function inactivar(id){
+        var data = {id:id};
+        data = JSON.stringify(data);
+        var token = '{{ csrf_token }}';
+
+        $.ajax({
+            headers: {'X-CSRFToken': token},
+            type: 'POST',
+            url: '/fac/cliente/estado/'+id,
+            data: data,
+            success: function(response){
+                if(response==="OK"){
+                    location.reload(true);
+                }else{
+                    mensaje('Error intentando cambiar estado del cliente');
+                }
+            },
+            error: function(jqXHR, textStatus, errorThrown){
+                console.log(textStatus, errorThrown);
+                mensaje(errorThrown, 'red');
+                cerrar_modal();
+            }
+        });
+    }
     $(document).ready(function() {
         $('#tbl_listado').DataTable();
     });
