agregado el Bootstrap Table p1

--- a/templates/base/base.html
+++ b/templates/base/base.html
@@ -23,6 +23,8 @@
     <link href="{% static 'base/vendor/jquery-confirm-v3.3.4/jquery-confirm.min.css' %}" rel="stylesheet">
     <!-- JQuery DateTimePicker -->
     <link href="{% static 'base/vendor/datetimepicker/jquery.datetimepicker.min.css' %}" rel="stylesheet">
+    <!-- Bootstrap Table -->
+    <link href="{% static 'base/vendor/bootstrap-table/dist/bootstrap-table.min.css' %}" rel="stylesheet">
 
 </head>
 
@@ -439,6 +441,8 @@
 <!-- JQueryConfirm plugins -->
 <script src="{% static 'base/vendor/jquery-confirm-v3.3.4/jquery-confirm.min.js' %}"></script>
 <!-- JQuery Datetime Pickeer plugins -->
+<script src="{% static 'base/vendor/bootstrap-table/dist/bootstrap-table.min.js' %}"></script>
+<!-- Bootstrap Table plugins -->
 <script src="{% static 'base/vendor/datetimepicker/jquery.datetimepicker.full.min.js' %}"></script>
 
 <script>
