--- a/templates/fac/clientes_list.html
+++ b/templates/fac/clientes_list.html
@@ -21,7 +21,7 @@
         {% if not obj %}
         <div class="alert alert-info">No hay clientes</div>
         {% else %}
-        <table class="table table-sm table-striped table-hover dt-responsive nowrap" id="tbl_listado">
+        <!--<table class="table table-sm table-striped table-hover dt-responsive nowrap" id="tbl_listado">
             <thead>
             <th>Id</th>
             <th>Nombres</th>
@@ -56,7 +56,8 @@
             </tr>
             {% endfor %}
             </tbody>
-        </table>
+        </table> -->
+        <table id="tbl_listado"></table>
         {% endif %}
     </div>
 </div>
@@ -89,7 +90,38 @@
         });
     }
     $(document).ready(function() {
-        $('#tbl_listado').DataTable();
+        $('#tbl_listado').bootstrapTable({
+            pagination: true,
+            search: true,
+            columns: [
+            {
+                field: 'id',
+                title: 'ID'
+            },
+            {
+                field: 'nombres',
+                title: 'Nombres'
+            },
+            {
+                field: 'apellidos',
+                title: 'Apellidos'
+            },
+            {
+                field: 'tipo',
+                title: 'TipoCliente'
+            },
+            {
+                field: 'celular',
+                title: 'Telefono'
+            },
+            {
+                field: 'estado',
+                title: 'Estado'
+            }],
+            data: [{
+
+            }]
+        });
     });
 </script>
 {% endblock js_page %}
